--- a/index.html
+++ b/index.html
@@ -3,9 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>TV Show Search</title>
+
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+
 </head>
 <body>
     <h1>TV Show Search</h1>
+    <form id="SearchForm">
+        <input type="text" class="text" placeholder="TV Show Title" name="query">
+        <button>Search</button>
+    </form>
+
+    <div id="container">
+        <img src="" alt="">
+    </div>
+
+    <script src="app.js"></script>
 </body>
 </html>
